# SSH-Putty-copy

./: CMakeLists.txt  README.md  connection.cpp  main  output.csv  ssh.cpp  synQueue.h
